UI reference page done

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -28,9 +28,9 @@ File: app.css
 /* General */
 
 body {
-  font-size: 14px;
+  /* font-size: 14px;
 
-  color: #525f7f;
+  color: #525f7f; */
 
   background-color: #f8f9fe;
 
