--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -290,7 +290,7 @@ a {
 
   font-size: 15px;
 
-  color: #5f5f5f;
+  color: #000;
 
   outline-width: 0;
 
@@ -349,7 +349,7 @@ a {
 
   text-decoration: none;
 
-  background: rgb(136 51 255 / 12%);
+  background: rgba(51, 75, 255, 0.12);
 }
 
 .menu-label {
